add dark mode demo and update README

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
+    },
+    "compilerOptions": {
+      "types": ["next-themes"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
